--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "^4.2.0",
-    "history": "^4.9.0",
+    "history": "^4.7.2",
     "moment": "^2.18.1",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
@@ -37,7 +38,7 @@
     "react-dom": "^16.0.0",
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
